fix: even out spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,13 +4,13 @@ body {
 	height: 100%;
 	color: #f5f5f5;
 	background: #001724;
-  background: -webkit-linear-gradient(0deg, #00301E, #001724);
-  background: -o-linear-gradient(0deg, #00301E, #001724);
-  background: -moz-linear-gradient(0deg, #00301E, #001724);
-  background: linear-gradient(0deg, #00261B, #001724);
+	background: -webkit-linear-gradient(0deg, #00301E, #001724);
+	background: -o-linear-gradient(0deg, #00301E, #001724);
+	background: -moz-linear-gradient(0deg, #00301E, #001724);
+	background: linear-gradient(0deg, #00261B, #001724);
 }
 
-.container.small {
+.container {
 	max-width: 700px;
 }
 
@@ -48,20 +48,23 @@ body {
 	opacity: 0;
 }
 
-#about .container.small:hover p {
+#about .container:hover p {
 	color: #777777;
 }
 
-#about .container.small:hover p span.keyword {
+#about .container:hover p span.keyword {
 	color: #f5f5f5;
 }
 
-#about .container.small p {
-	margin-bottom: 45px;
+#about .container p {
 	color: #f5f5f5;
 	font-family: "Hans Kendrick", sans-serif;
-	font-size: 40px;
+	font-size: 4rem;
 	transition: color .5s ease;
+}
+
+#about .container p:first-of-type {
+	margin-bottom: 4rem;
 }
 
 .keyword {
@@ -72,6 +75,7 @@ body {
 #projects {
 	display: flex;
 	align-items: center;
+	justify-content: center;
 	min-height: 100vh;
 	padding-top: 3rem;
 	padding-bottom: 3rem;
@@ -87,14 +91,14 @@ body {
 
 .project-title {
 	color: #f5f5f5;
-	font-size: 40px;
+	font-size: 4rem;
 	border-bottom: 2px solid #f5f5f5;
 	text-decoration: none;
 	transition: color .2s ease, border .2s ease;
 }
 
 .project p {
-	font-size: 40px;
+	font-size: 4rem;
 }
 
 .colicious .project-title:hover {
@@ -127,25 +131,29 @@ body {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	padding-top: 5rem;
-	padding-bottom: 5rem;
+	min-height: 100vh;
+	padding-top: 3rem;
+	padding-bottom: 3rem;
 	opacity: 0;
 }
 
-#social .container.small p {
-	margin-bottom: 4rem;
+#social .container p {
 	font-size: 40px;
 	font-family: "Hans Kendrick", sans-serif;
 }
 
-#social .container.small a {
+#social .container p:first-of-type {
+	margin-bottom: 4rem;
+}
+
+#social .container a {
 	color: #f5f5f5;
 	border-bottom: 2px solid #f5f5f5;
 	text-decoration: none;
 	transition: color .2s ease, border .2s ease;
 }
 
-#social .container.small a:hover {
+#social .container a:hover {
 	color: #666666;
 	border-bottom: 2px solid #666666;
 }
